--- a/app/src/main/res/layout/fragment_guided_tour.xml
+++ b/app/src/main/res/layout/fragment_guided_tour.xml
@@ -5,9 +5,166 @@
     android:layout_height="match_parent"
     tools:context=".ui.guidedtour.GuidedTour">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+		<ScrollView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			tools:ignore="UselessParent">
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:orientation="vertical"
+				android:padding="16dp"
+				tools:ignore="ScrollViewSize,UselessParent">
 
-</FrameLayout>
+				<TextView
+					android:id="@+id/textViewTitle"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="使用說明"
+					android:textSize="45sp"
+					android:layout_gravity="center_horizontal"
+					android:layout_marginBottom="16dp"
+					android:textStyle="bold"
+					tools:ignore="HardcodedText" />
+
+				<TextView
+					android:id="@+id/textView2"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_1"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_main"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_0"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<TextView
+					android:id="@+id/textView3"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_2"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_menu"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_1"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<TextView
+					android:id="@+id/textView4"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_3"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_login"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_2"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<TextView
+					android:id="@+id/textView5"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_4"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_medicine_box"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_2"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<TextView
+					android:id="@+id/textView6"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_5"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_medicine"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_6"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+
+
+				<TextView
+					android:id="@+id/textView7"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_6"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<TextView
+					android:id="@+id/textView8"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_7"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_calender"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_4"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<ImageView
+					android:id="@+id/image_calender_thing"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_3"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+				<TextView
+					android:id="@+id/textView9"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/guided_8"
+					android:textSize="25sp"
+					tools:ignore="HardcodedText" />
+
+				<ImageView
+					android:id="@+id/image_user"
+					android:layout_width="380dp"
+					android:layout_height="700dp"
+					android:layout_centerHorizontal="true"
+					android:layout_marginBottom="24dp"
+					android:src="@drawable/guided_5"
+					tools:ignore="ContentDescription,ObsoleteLayoutParam" />
+
+			</LinearLayout>
+		</ScrollView>
+	</FrameLayout>
