--- a/app/src/main/res/layout/fragment_user_data.xml
+++ b/app/src/main/res/layout/fragment_user_data.xml
@@ -154,20 +154,47 @@
 		        android:textSize="20sp"
 		        tools:ignore="HardcodedText" />
         </LinearLayout>
-	    <!-- 事件列表 -->
 
-	    <TextView
-		    android:id="@+id/eventTextView"
+	    <!-- 事件列表 -->
+	    <LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
-		    android:text=""
-		    android:textSize="16sp"
-		    tools:ignore="MissingConstraints" />
+		    android:layout_marginTop="10dp"
+		    android:orientation="vertical">
+
+		    <TextView
+			    android:id="@+id/eventTextView_0"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:text=""
+			    android:layout_marginTop="10dp"
+			    android:textSize="16sp"
+			    tools:ignore="MissingConstraints" />
+
+		    <TextView
+			    android:id="@+id/eventTextView_1"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:text=""
+			    android:layout_marginTop="10dp"
+			    android:textSize="16sp"
+			    tools:ignore="MissingConstraints" />
+
+		    <TextView
+			    android:id="@+id/eventTextView_2"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent"
+			    android:text=""
+			    android:layout_marginTop="10dp"
+			    android:textSize="16sp"
+			    tools:ignore="MissingConstraints" />
+	    </LinearLayout>
 
 	    <Button
 		    android:id="@+id/button_data_save"
-		    android:layout_width="380dp"
+		    android:layout_width="350dp"
 		    android:layout_height="50dp"
+		    android:layout_marginTop="10dp"
 		    android:background="@drawable/color"
 		    android:text="保存"
 		    android:textSize="20sp"
