--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,53 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
-    android:gravity="bottom"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="@dimen/nav_header_height"
+	android:background="@drawable/side_nav_bar"
+	android:gravity="bottom"
+	android:orientation="vertical"
+	android:paddingLeft="@dimen/activity_horizontal_margin"
+	android:paddingTop="@dimen/activity_vertical_margin"
+	android:paddingRight="@dimen/activity_horizontal_margin"
+	android:paddingBottom="@dimen/activity_vertical_margin"
+	android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        tools:ignore="UselessParent">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="horizontal"
+		tools:ignore="UselessParent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="125dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/nav_header_desc"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@drawable/images11" />
+		<ImageView
+			android:id="@+id/imageView"
+			android:layout_width="120dp"
+			android:layout_height="match_parent"
+			android:contentDescription="@string/nav_header_desc"
+			android:paddingTop="@dimen/nav_header_vertical_spacing"
+			app:srcCompat="@drawable/images11"
+			android:clickable="true"
+			android:onClick="selectImageFromGallery" />
 
-        <LinearLayout
-            android:layout_width="259dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="65dp"
-                android:paddingTop="@dimen/nav_header_vertical_spacing"
-                android:text="@string/nav_header_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+		<LinearLayout
+			android:layout_width="259dp"
+			android:layout_height="match_parent"
+			android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginStart="15dp"
-                android:text="@string/nav_header_subtitle" />
-        </LinearLayout>
-    </LinearLayout>
+			<!-- 用戶名稱 -->
+			<TextView
+				android:id="@+id/test_user"
+				android:layout_width="match_parent"
+				android:layout_height="40dp"
+				android:layout_marginStart="15dp"
+				android:layout_marginTop="45dp"
+				android:paddingTop="@dimen/nav_header_vertical_spacing"
+				android:text="Default Text"
+				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+				tools:ignore="HardcodedText" />
+
+			<!-- 電子郵件地址 -->
+			<TextView
+				android:id="@+id/text_mail"
+				android:layout_width="150dp"
+				android:layout_height="56dp"
+				android:layout_marginStart="15dp"
+				android:lines="2"
+				android:text="@string/nav_header_subtitle"
+				android:textSize="16dp"
+				tools:ignore="SpUsage" />
+
+		</LinearLayout>
+	</LinearLayout>
 </LinearLayout>
