--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -18,8 +18,7 @@
 			android:text="行事曆事件修改"
 			android:textSize="50sp"
 			app:layout_constraintEnd_toEndOf="parent"
-			tools:ignore="MissingConstraints"
-			tools:layout_editor_absoluteY="7dp" />
+			tools:ignore="HardcodedText,MissingConstraints"/>
 
 		<LinearLayout
 			android:layout_width="match_parent"
@@ -36,7 +35,7 @@
 				android:hint="@string/thing_name"
 				android:textSize="20sp"
 				android:imeOptions="actionNext"
-				tools:ignore="Autofill,MissingPrefix,TextFields" />
+				tools:ignore="Autofill,TextFields" />
 
 			<!-- 選擇事件起始日期的彈跳視窗 -->
 			<LinearLayout
@@ -49,8 +48,7 @@
 					android:layout_height="50dp"
 					android:textSize="20sp"
 					android:text="@string/start_day"
-					android:clickable="true"
-					android:focusable="true" />
+					/>
 
 				<EditText
 					android:id="@+id/editTextStartDate"
@@ -77,8 +75,7 @@
 					android:layout_height="50dp"
 					android:textSize="20sp"
 					android:text="@string/end_day"
-					android:clickable="true"
-					android:focusable="true" />
+					/>
 
 				<EditText
 					android:id="@+id/editTextEndDate"
@@ -105,9 +102,7 @@
 					android:layout_width="100dp"
 					android:layout_height="50dp"
 					android:textSize="20sp"
-					android:text="@string/start_time"
-					android:clickable="true"
-					android:focusable="true" />
+					android:text="@string/start_time" />
 
 				<EditText
 					android:id="@+id/editTextStartTime"
@@ -120,7 +115,7 @@
 					android:inputType="none"
 					android:focusable="false"
 					android:onClick="showStartTimePickerDialog"
-					tools:ignore="Autofill,HardcodedText,TextFields" />
+					tools:ignore="Autofill,HardcodedText" />
 			</LinearLayout>
 
 			<!-- 選擇事件結束時間的彈跳視窗 -->
@@ -133,9 +128,7 @@
 					android:layout_width="100dp"
 					android:layout_height="50dp"
 					android:textSize="20sp"
-					android:text="@string/end_time"
-					android:clickable="true"
-					android:focusable="true" />
+					android:text="@string/end_time" />
 
 				<EditText
 					android:id="@+id/editTextEndTime"
@@ -148,7 +141,7 @@
 					android:inputType="none"
 					android:focusable="false"
 					android:onClick="showEndTimePickerDialog"
-					tools:ignore="Autofill,HardcodedText,TextFields" />
+					tools:ignore="Autofill,HardcodedText" />
 
 			</LinearLayout>
 
