--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -62,7 +62,7 @@
 			android:text="行事曆紀錄"
 			tools:ignore="HardcodedText" />
 		<item
-			android:id="@+id/nav_user"
+			android:id="@+id/nav_user_data"
 			android:icon="@android:drawable/ic_menu_my_calendar"
 			android:title="@string/menu_user"
 			android:layout_width="match_parent"
