--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -4,18 +4,12 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:id="@+id/swipeRefreshLayout"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-
-	<ScrollView
-		android:id="@+id/scrollView"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:fillViewport="true"
-		tools:context=".ui.Calender.CalenderFragment">
+	android:layout_height="match_parent"
+	tools:context=".ui.Calender.CalenderFragment">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="match_parent">
 
 		<!-- DatePicker -->
 		<DatePicker
@@ -25,10 +19,22 @@
 			android:layout_marginTop="16dp"
 			android:padding="0dp"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintHorizontal_bias="0.491"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			tools:ignore="MissingConstraints,RtlCompat" />
+
+		<!-- 事件列表 -->
+
+		<androidx.recyclerview.widget.RecyclerView
+			android:id="@+id/recyclerView"
+			android:layout_width="376dp"
+			android:layout_height="183dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintHorizontal_bias="1.0"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@id/datePicker"
+			app:layout_constraintVertical_bias="1.0" />
 
 		<com.google.android.material.floatingactionbutton.FloatingActionButton
 			android:id="@+id/fabAddEvent"
@@ -38,21 +44,12 @@
 			android:layout_marginTop="8dp"
 			android:layout_marginEnd="16dp"
 			android:src="@android:drawable/ic_input_add"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/datePicker"
-			tools:ignore="ContentDescription,MissingConstraints" />
-
-		<!-- 事件列表 -->
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/recyclerView"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/fabAddEvent" />
+			app:layout_constraintTop_toBottomOf="@id/datePicker"
+			app:layout_constraintVertical_bias="0.0"
+			tools:ignore="ContentDescription,MissingConstraints" />
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
-	</ScrollView>
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
