--- a/app/src/main/res/layout/fragment_emergency_contact.xml
+++ b/app/src/main/res/layout/fragment_emergency_contact.xml
@@ -3,7 +3,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.emergency.emergency_contact">
+	tools:context=".ui.emergency.EmergencyContactFragment">
 
 	<LinearLayout
 		android:layout_width="match_parent"
