--- a/app/src/main/res/layout/fragment_memory.xml
+++ b/app/src/main/res/layout/fragment_memory.xml
@@ -8,7 +8,7 @@
 	tools:context=".ui.Memory.MemoryFragment">
 
 	<TextView
-		android:id="@+id/text_medicine_box"
+		android:id="@+id/text_memory_down"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
@@ -22,30 +22,40 @@
 		app:layout_constraintTop_toTopOf="parent"
 		tools:ignore="HardcodedText" />
 
+	<ImageView
+		android:id="@+id/imageView2"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="36dp"
+		android:layout_marginTop="12dp"
+		android:src="@drawable/down"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/text_memory_down" />
+
 	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
 		android:layout_height="0dp"
-		app:layout_constraintTop_toBottomOf="@id/text_medicine_box"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="16dp"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent">
+		app:layout_constraintTop_toBottomOf="@id/imageView2"
+		app:layout_constraintBottom_toTopOf="@+id/button_open_video">
 
 		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/medicine_list"
+			android:id="@+id/down_list"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content" />
 	</androidx.core.widget.NestedScrollView>
 
-	<!-- 新增按鈕 -->
 	<Button
 		android:id="@+id/button_open_video"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:text="開啟即時影像"
-		app:layout_constraintTop_toBottomOf="@id/text_medicine_box"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginTop="16dp" />
+		android:layout_marginBottom="16dp"
+		tools:ignore="HardcodedText,MissingConstraints,NotSibling" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
