--- a/app/src/main/res/layout/fragment_calender_thing.xml
+++ b/app/src/main/res/layout/fragment_calender_thing.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -15,7 +16,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="28dp"
-			android:text="行事曆事件新增"
+			android:text="@string/calender_thing"
 			android:textSize="50sp"
 			app:layout_constraintEnd_toEndOf="parent"
 			tools:ignore="HardcodedText,MissingConstraints"/>
