--- a/app/src/main/res/layout/fragment_calender_thing_update.xml
+++ b/app/src/main/res/layout/fragment_calender_thing_update.xml
@@ -11,11 +11,11 @@
 		tools:context=".ui.Calender.CalenderThingUpdateFragment">
 
 		<TextView
-			android:id="@+id/textView_calender_thing"
+			android:id="@+id/textView_calender_thing_update"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="28dp"
-			android:text="行事曆事件修改"
+			android:text="@string/calender_thing_update"
 			android:textSize="50sp"
 			app:layout_constraintEnd_toEndOf="parent"
 			tools:ignore="HardcodedText,MissingConstraints"/>
@@ -25,7 +25,7 @@
 			android:layout_height="wrap_content"
 			android:orientation="vertical"
 			android:padding="16dp"
-			app:layout_constraintTop_toBottomOf="@id/textView_calender_thing">
+			app:layout_constraintTop_toBottomOf="@id/textView_calender_thing_update">
 
 			<EditText
 				android:id="@+id/editText_thing"
