--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -81,17 +81,7 @@
             android:hint="中文品名查詢"
             tools:ignore="Autofill,HardcodedText,TextFields" />
 
-        <!-- 英文品名查詢輸入框 -->
-        <EditText
-            android:id="@+id/editText_englishName"
-            android:layout_width="369dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:hint="英文品名查詢"
-            tools:ignore="Autofill,HardcodedText,TextFields" />
-        <!-- 形狀下拉式選單 -->
+	    <!-- 形狀下拉式選單 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -194,13 +184,16 @@
                 android:layout_marginStart="10dp"
                 tools:ignore="HardcodedText" />
 
-            <Spinner
-                android:id="@+id/spinner_markings"
-                android:layout_width="285dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginEnd="16dp"  />
+	        <EditText
+		        android:id="@+id/editText_mark"
+		        android:layout_width="278dp"
+		        android:layout_height="50dp"
+		        android:layout_marginStart="0dp"
+		        android:layout_marginTop="16dp"
+		        android:layout_marginEnd="16dp"
+		        android:hint="輸入藥品上的標記或數字"
+		        tools:ignore="Autofill,HardcodedText,TextFields" />
+
         </LinearLayout>
         <!-- 查詢按鈕 -->
         <Button
