--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -8,18 +8,20 @@
 
 	<ImageView
 		android:id="@+id/medicine_image"
-		android:layout_width="200dp"
-		android:layout_height="200dp"
+		android:layout_width="180dp"
+		android:layout_height="180dp"
 		android:layout_weight="1"
-		android:src="@drawable/medicine_3" />
+		android:src="@drawable/medicine_3"
+		tools:ignore="ContentDescription,InefficientWeight" />
 
 	<TextView
 		android:id="@+id/medicine_name"
-		android:layout_width="200dp"
+		android:layout_width="164dp"
 		android:layout_height="wrap_content"
 		android:gravity="center"
+		android:maxLines="3"
 		android:text="大豐普樂非林錠 "
-		android:textSize="16sp"
+		android:textSize="15sp"
 		tools:ignore="HardcodedText" />
 
 </LinearLayout>
