--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,8 +5,7 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.Memory.VideoFragment"
-	>
+	tools:context=".ui.Memory.VideoFragment">
 
 	<SurfaceView
 		android:id="@+id/surfaceView"
