--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+
+<RelativeLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
-	<com.google.android.exoplayer2.ui.PlayerView
-		android:id="@+id/player_view"
+	<WebView
+		android:id="@+id/web_view"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		app:use_controller="true" />
+		android:layout_height="match_parent" />
 
-</FrameLayout>
+</RelativeLayout>
